fixed a minor issue with edit overflow on mobile

--- a/src/app/style/base.scss
+++ b/src/app/style/base.scss
@@ -80,15 +80,16 @@ background:white !important;
 
 .edit-field{
     height:40vh;
+    overflow: auto;
     button+br{
         display:none;
     }
-   div{
-       height:35vh;
-    //    text-area{
-    //         height:30vh !important;
-    //     }
     div{
+        height:35vh;
+        //    text-area{
+            //         height:30vh !important;
+            //     }
+            div{
         height: 20px!important;
         z-index: 1000; 
         background-color: white;  
